2012-04-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.0.2

	* inst/include/*: Upgraded to new release 3.0.2 of Armadillo

2012-04-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppArmadilloConfig.h: Undefine NDEBUG to not suppress
	Armadillo dedebug messages

2012-04-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.0.1

	* inst/include/*: Upgraded to new release 3.0.1 of Armadillo

2012-04-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppArmadilloConfig.h: Protect define of
	ARMA_DEFAULT_OSTREAM by a #ifndef test

2012-04-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.0

	* inst/include/*: Upgraded to new release 3.0.0 of Armadillo

2012-04-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.40

	* inst/include/*: Upgraded to new test release 2.99.4 of Armadillo

2012-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.39

	* inst/include/*: Upgraded to new test release 2.99.3 of Armadillo

2012-03-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.38

	* inst/include/*: Upgraded to new test release 2.99.2 of Armadillo

2012-03-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.37

2012-03-24  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppArmadilloWrap.h: adapt to Armadillo 2.99.1

2012-03-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/*: Upgraded to new test release 2.99.1 of Armadillo

2012-03-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.36

	* inst/include/*: Upgraded to new release 2.4.4 of Armadillo

2012-02-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.35 (depending on Rcpp 0.9.10)

	* inst/include/*: Upgraded to new release 2.4.3 of Armadillo

2012-02-01  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/armadillo_bits/Cube_meat.hpp : changes related to
	std::cout -> Rcpp::Rcout
