@@ -1,3 +1,7 @@
+2012-04-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/examples/fastLm.r: New example fastLm
+
 2012-04-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Release 0.3.0.2
